[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/RobotHackGame.gd" type="Script" id=1]
[ext_resource path="res://ButtonThemes/Normal.tres" type="StyleBox" id=2]
[ext_resource path="res://Graphics/devTree/background.png" type="Texture" id=3]

[node name="RobotHackGame" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 636, 368 )
scale = Vector2( 1.20769, 0.44 )
texture = ExtResource( 3 )

[node name="Buttons" type="Node2D" parent="."]

[node name="Button1" type="Button" parent="Buttons"]
margin_left = 480.0
margin_top = 128.0
margin_right = 528.0
margin_bottom = 176.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button8" type="Button" parent="Buttons"]
margin_left = 544.0
margin_top = 128.0
margin_right = 592.0
margin_bottom = 176.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button6" type="Button" parent="Buttons"]
margin_left = 544.0
margin_top = 192.0
margin_right = 592.0
margin_bottom = 240.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button7" type="Button" parent="Buttons"]
margin_left = 544.0
margin_top = 256.0
margin_right = 592.0
margin_bottom = 304.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button" type="Button" parent="Buttons"]
margin_left = 544.0
margin_top = 320.0
margin_right = 592.0
margin_bottom = 368.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button10" type="Button" parent="Buttons"]
margin_left = 544.0
margin_top = 384.0
margin_right = 592.0
margin_bottom = 432.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button11" type="Button" parent="Buttons"]
margin_left = 608.0
margin_top = 384.0
margin_right = 656.0
margin_bottom = 432.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button12" type="Button" parent="Buttons"]
margin_left = 672.0
margin_top = 384.0
margin_right = 720.0
margin_bottom = 432.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button13" type="Button" parent="Buttons"]
margin_left = 736.0
margin_top = 384.0
margin_right = 784.0
margin_bottom = 432.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button14" type="Button" parent="Buttons"]
margin_left = 736.0
margin_top = 320.0
margin_right = 784.0
margin_bottom = 368.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button15" type="Button" parent="Buttons"]
margin_left = 736.0
margin_top = 256.0
margin_right = 784.0
margin_bottom = 304.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button16" type="Button" parent="Buttons"]
margin_left = 736.0
margin_top = 192.0
margin_right = 784.0
margin_bottom = 240.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button17" type="Button" parent="Buttons"]
margin_left = 736.0
margin_top = 128.0
margin_right = 784.0
margin_bottom = 176.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button18" type="Button" parent="Buttons"]
margin_left = 672.0
margin_top = 128.0
margin_right = 720.0
margin_bottom = 176.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button19" type="Button" parent="Buttons"]
margin_left = 608.0
margin_top = 128.0
margin_right = 656.0
margin_bottom = 176.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button20" type="Button" parent="Buttons"]
margin_left = 608.0
margin_top = 192.0
margin_right = 656.0
margin_bottom = 240.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button21" type="Button" parent="Buttons"]
margin_left = 608.0
margin_top = 256.0
margin_right = 656.0
margin_bottom = 304.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button22" type="Button" parent="Buttons"]
margin_left = 608.0
margin_top = 320.0
margin_right = 656.0
margin_bottom = 368.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button23" type="Button" parent="Buttons"]
margin_left = 672.0
margin_top = 320.0
margin_right = 720.0
margin_bottom = 368.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button24" type="Button" parent="Buttons"]
margin_left = 672.0
margin_top = 256.0
margin_right = 720.0
margin_bottom = 304.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button25" type="Button" parent="Buttons"]
margin_left = 672.0
margin_top = 192.0
margin_right = 720.0
margin_bottom = 240.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button2" type="Button" parent="Buttons"]
margin_left = 480.0
margin_top = 192.0
margin_right = 528.0
margin_bottom = 240.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button3" type="Button" parent="Buttons"]
margin_left = 480.0
margin_top = 256.0
margin_right = 528.0
margin_bottom = 304.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button4" type="Button" parent="Buttons"]
margin_left = 480.0
margin_top = 320.0
margin_right = 528.0
margin_bottom = 368.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Button5" type="Button" parent="Buttons"]
margin_left = 480.0
margin_top = 384.0
margin_right = 528.0
margin_bottom = 432.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="GameTimer" type="Timer" parent="."]
process_mode = 0

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 480.0
margin_top = 464.0
margin_right = 784.0
margin_bottom = 512.0
grow_horizontal = 0
max_value = 6.0
value = 6.0

[node name="Button" type="Button" parent="."]
margin_left = 528.0
margin_top = 256.0
margin_right = 736.0
margin_bottom = 304.0
text = "Zacznij hackowac"

[connection signal="pressed" from="Buttons/Button1" to="." method="unColor" binds= [ "Button1" ]]
[connection signal="pressed" from="Buttons/Button8" to="." method="unColor" binds= [ "Button8" ]]
[connection signal="pressed" from="Buttons/Button6" to="." method="unColor" binds= [ "Button6" ]]
[connection signal="pressed" from="Buttons/Button7" to="." method="unColor" binds= [ "Button7" ]]
[connection signal="pressed" from="Buttons/Button" to="." method="unColor" binds= [ "Button" ]]
[connection signal="pressed" from="Buttons/Button10" to="." method="unColor" binds= [ "Button10" ]]
[connection signal="pressed" from="Buttons/Button11" to="." method="unColor" binds= [ "Button11" ]]
[connection signal="pressed" from="Buttons/Button12" to="." method="unColor" binds= [ "Button12" ]]
[connection signal="pressed" from="Buttons/Button13" to="." method="unColor" binds= [ "Button13" ]]
[connection signal="pressed" from="Buttons/Button14" to="." method="unColor" binds= [ "Button14" ]]
[connection signal="pressed" from="Buttons/Button15" to="." method="unColor" binds= [ "Button15" ]]
[connection signal="pressed" from="Buttons/Button16" to="." method="unColor" binds= [ "Button16" ]]
[connection signal="pressed" from="Buttons/Button17" to="." method="unColor" binds= [ "Button17" ]]
[connection signal="pressed" from="Buttons/Button18" to="." method="unColor" binds= [ "Button18" ]]
[connection signal="pressed" from="Buttons/Button19" to="." method="unColor" binds= [ "Button19" ]]
[connection signal="pressed" from="Buttons/Button20" to="." method="unColor" binds= [ "Button20" ]]
[connection signal="pressed" from="Buttons/Button21" to="." method="unColor" binds= [ "Button21" ]]
[connection signal="pressed" from="Buttons/Button22" to="." method="unColor" binds= [ "Button22" ]]
[connection signal="pressed" from="Buttons/Button23" to="." method="unColor" binds= [ "Button23" ]]
[connection signal="pressed" from="Buttons/Button24" to="." method="unColor" binds= [ "Button24" ]]
[connection signal="pressed" from="Buttons/Button25" to="." method="unColor" binds= [ "Button25" ]]
[connection signal="pressed" from="Buttons/Button2" to="." method="unColor" binds= [ "Button2" ]]
[connection signal="pressed" from="Buttons/Button3" to="." method="unColor" binds= [ "Button3" ]]
[connection signal="pressed" from="Buttons/Button4" to="." method="unColor" binds= [ "Button4" ]]
[connection signal="pressed" from="Buttons/Button5" to="." method="unColor" binds= [ "Button5" ]]
[connection signal="timeout" from="Timer" to="." method="timerTick"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="pressed" from="Button" to="." method="startHacking"]
